--- a/GeoMenagerie/index.html
+++ b/GeoMenagerie/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Vincent Escueta</a>
+                <a class="navbar-brand page-scroll" href="../index.html">Vincent Escueta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
