--- a/FreqsandGrads/index.html
+++ b/FreqsandGrads/index.html
@@ -9,7 +9,7 @@
       padding-left: 100px;  
     }  
   </style> 
-    <title>Vincent Escueta</title>
+    <title>Vincent Escueta  |  CS 194-26</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Vincent Escueta</a>
+                <a class="navbar-brand page-scroll" href="../index.html">Vincent Escueta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -171,6 +171,7 @@
                     <img src="img/last_supperLaplacian2.jpg" width="600px" />
                     <figcaption align="middle">Laplacian (sigma=2)</figcaption></td>
                 </tr>
+                <tr>
                     <td align="middle">
                     <img src="img/last_supperGaussian4.jpg" width="600px" />
                     <figcaption align="middle">Gaussian (sigma=4)</figcaption></td>
@@ -223,6 +224,7 @@
                     <img src="img/hunkleandbelleGrayLaplacian2.jpg" width="400px" />
                     <figcaption align="middle">Laplacian s(igma=2)</figcaption></td>
                 </tr>
+                <tr>
                     <td align="middle">
                     <img src="img/hunkleandbelleGrayGaussian4.jpg" width="400px" />
                     <figcaption align="middle">Gaussian (sigma=4)</figcaption></td>
@@ -465,6 +467,7 @@
             </tr>
         </table>
     </div> 
+
 </section>
 <section class="bg" id="resume">
         <div class="container text-center">
@@ -479,7 +482,7 @@
             </div>
         </div>
     </section>
-        <script src=../"js/jquery.js"></script>
+    <script src=../"js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="../js/bootstrap.min.js"></script>
