--- a/Images/index.html
+++ b/Images/index.html
@@ -68,7 +68,7 @@
     <h2 align="middle">Vincent Escueta</h2>
 
     <div class="padded">
-        <p>Sergei Mikhailovich Prokudin-Gorskii took 3 cameras. He put a blue filter on one, a green filter on another, and a red filter over the last. He put the green camera on top the red camera and the blue camera on top of the green one. He then took these cameras and photographs of scenes with all three cameras. Sergei took thousands of pictures, but never got to see them in color. By aligning his photographs using normalized cross correlation, the colored photographs that Sergei wanted have now come to life.</p>
+        <p>Sergei Mikhailovich Prokudin-Gorskii took 3 cameras. He put a blue filter on one, a green filter on another, and a red filter over the last. He put the green camera on top the red camera and the blue camera on top of the green one. He then took these cameras and photographs of scenes with all three cameras. Sergei took thousands of pictures, but never got to see them in color. By aligning his photographs using normalized cross correlation, the colored photographs that Sergei wanted have now come to life.</p></div>
 
     <h2 align="middle"> Results for all images </h2>
         <div class="slideshow-container">
@@ -236,7 +236,6 @@
          </div>
          <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
          <a class="next hvr-grow" onclick="plusSlides(1)">&#10095;</a>
-        </div>
         </div>
 
     <h2 align="middle">Normalized Cross Correlation (NCC)</h2>
