making small changes

--- a/Rasterizester/index.html
+++ b/Rasterizester/index.html
@@ -9,7 +9,7 @@
       padding-left: 100px;  
     }  
   </style> 
-    <title>Vincent Escueta  |  CS 194-26</title>
+    <title>Vincent Escueta  |  CS 184</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,9 +64,7 @@
     <header class="bg"> </header>
 <section class="bg">
 <br />
-<h1 align="middle">Assignment 1: Rasterizester</h1>
-    <h2 align="middle">Vincent Escueta</h2>
-
+<h1 align="middle">Rasterizester</h1>
     <div class="padded">
         <p>The assignment went over rasterizing points, lines, and triangles. After being able to creates shapes using points, lines and triangles, we then learned how to antialias triangles using supersampling so we could take away jaggies to create smoother images. Then we learned to transform those images so we can translate and rotate images, use that to our advantage when creating images, and manipulate already created picures by moving them around the screen or being able to zoom in and out of an image. Afterwords, we were to use barycentric coordinates to create shapes with multiple colros such as a color wheel, then used the barycentric coordinates to apply textures then apply filters. I then learned how to apply different sampling methods such as nearest pixel, bilinear, and trilinear.</p>
 
