made mroe changes

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     Animation: Lighting, Modeling
                                 </div>
                                 <div class="project-name">
-                                    Stargazing
+                                    Stargazing (Opens New Page)
                                 </div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                     Animation: Cloth Simulation, Rigging
                                 </div>
                                 <div class="project-name">
-                                    The Generous Ghost
+                                    The Generous Ghost (Opens New Page)
                                 </div>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                                     Web Development
                                 </div>
                                 <div class="project-name">
-                                    University Catholic Conference of California 2018 Website
+                                    University Catholic Conference of California 2018 Website (Opens New Page)
                                 </div>
                             </div>
                         </div>
