fixing images git push origin gh-pages

--- a/Images/index.html
+++ b/Images/index.html
@@ -69,7 +69,7 @@
     <h2 align="middle">Vincent Escueta</h2>
 
     <div class="padded">
-        <p>Sergei Mikhailovich Prokudin-Gorskii took 3 cameras. He put a blue filter on one, a green filter on another, and a red filter over the last. He put the green camera on top the red camera and the blue camera on top of the green one. He then took these cameras and photographs of scenes with all three cameras. Sergei took thousands of pictures, but never got to see them in color. By aligning his photographs using normalized cross correlation, the colored photographs that Sergei wanted have now come to life.</p></div>
+        <p>Sergei Mikhailovich Prokudin-Gorskii took 3 cameras. He put a blue filter on one, a green filter on another, and a red filter over the last. He put the green camera on top the red camera and the blue camera on top of the green one. He then took these cameras and photographs of scenes with all three cameras. Sergei took thousands of pictures, but never got to see them in color. By aligning his photographs using normalized cross correlation, the colored photographs that Sergei wanted have now come to life.</p>
 
     <h2 align="middle"> Results for all images </h2>
         <div class="slideshow-container">
@@ -238,6 +238,7 @@
          <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
          <a class="next hvr-grow" onclick="plusSlides(1)">&#10095;</a>
         </div>
+    </div>
 
     <h2 align="middle">Normalized Cross Correlation (NCC)</h2>
         <p>To produce colored images, the blue, green, and red images must be well aligned. To do this, we move the red and green photographs over the blue until they almost perfectly align. To find the best alignment, we took the red and green images and displaceed them horizonally and vertically ([-15, 15] pixels each direction) and found the normalized cross correlation between the green image and the blue image then with the red image and the blue image at each displacement based on gray intensities. The displaced green and red photos that give the best correlation with the blue photos are then used to create the colored rgb image. The equation for the normalized cross correlation is</p>
