--- a/Images/index.html
+++ b/Images/index.html
@@ -24,7 +24,7 @@
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../main.css">
+    <!-- <link rel="stylesheet" href="../main.css"> -->
     <link rel="stylesheet" href="slideshow.css">
 
     <!-- Plugin CSS -->
