--- a/Images/index.html
+++ b/Images/index.html
@@ -24,7 +24,7 @@
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css">
-    <!-- <link rel="stylesheet" href="../main.css"> -->
+    <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="slideshow.css">
 
     <!-- Plugin CSS -->
@@ -77,7 +77,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/emirEdgeColored.jpg" width="720px" />
+                    <img src="img/emirEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</figcaption></td>
                 </tr>
             </table>
@@ -86,7 +86,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/harvestersEdgeColored.jpg" width="720px" />
+                    <img src="img/harvestersEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter harvesters.tif: R:[124  15] G:[60 18] TIME:25.585105896</figcaption></td>
                 </tr>
             </table>
@@ -95,7 +95,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/iconEdgeColored.jpg" width="720px" />
+                    <img src="img/iconEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter icon.tif: R:[91 23] G:[38 16] TIME:26.5196139812</figcaption></td>
                 </tr>
             </table>
@@ -104,7 +104,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/ladyEdgeColored.jpg" width="720px" />
+                    <img src="img/ladyEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter lady.tif: R:[114  15] G:[56  9] TIME:29.0473020077</figcaption></td>
                 </tr>
             </table>
@@ -113,7 +113,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/self_portraitEdgeColored.jpg" width="720px" />
+                    <img src="img/self_portraitEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter self_portrait.tif: R:[175  37] G:[77 29] TIME:28.707857132</figcaption></td>
                 </tr>
             </table>
@@ -122,7 +122,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/three_generationsEdgeColored.jpg" width="720px" />
+                    <img src="img/three_generationsEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter three_generations.tif: R:[113  11] G:[54 17] TIME:26.2358720303</figcaption></td>
                 </tr>
             </table>
@@ -131,7 +131,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/trainEdgeColored.jpg" width="720px" />
+                    <img src="img/trainEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter train.tif: R:[85 34] G:[40  8] TIME:26.7940208912</figcaption></td>
                 </tr>
             </table>
@@ -140,7 +140,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/turkmenEdgeColored.jpg" width="720px" />
+                    <img src="img/turkmenEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter turkmen.tif: R:[116  29] G:[57 22] TIME:27.184166193</figcaption></td>
                 </tr>
             </table>
@@ -149,7 +149,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/luganoEdgeColored.jpg" width="720px" />
+                    <img src="img/luganoEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">extra lugano.tif: R:[120  32] G:[54  7] TIME:36.9884650707</figcaption></td>
                 </tr>
             </table>
@@ -158,7 +158,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/stmarksEdgeColored.jpg" width="720px" />
+                    <img src="img/stmarksEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">extra stmarks.tif: R:[113  30] G:[47 13] TIME:34.7976961136 </figcaption></td>
                 </tr>
             </table>
@@ -167,7 +167,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/telescopeEdgeColored.jpg" width="720px" />
+                    <img src="img/telescopeEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">extra telescope.tif: R:[144  54] G:[67 30] TIME:37.0999400616</figcaption></td>
                 </tr>
             </table>
@@ -176,7 +176,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/mozhaiskEdgeColored.jpg" width="720px" />
+                    <img src="img/mozhaiskEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">extra mozhaisk.tif: R:[92 25] G:[41 15] TIME:35.2776269913</figcaption></td>
                 </tr>
             </table>
@@ -185,7 +185,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/peopleEdgeColored.jpg" width="720px" />
+                    <img src="img/peopleEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">extra people.tif: R:[157  33] G:[72 21] TIME:34.1512980461</figcaption></td>
                 </tr>
             </table>
@@ -194,7 +194,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/people2EdgeColored.jpg" width="720px" />
+                    <img src="img/people2EdgeColored.jpg" width="720px" >
                     <figcaption align="middle">extra people2.tif: R:[133  39] G:[62 25] TIME:34.4929409027 </figcaption></td>
                 </tr>
             </table>
@@ -203,7 +203,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/cathedralEdgeColored.jpg" width="720px" />
+                    <img src="img/cathedralEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</figcaption></td>
                 </tr>
             </table>
@@ -212,7 +212,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/monasteryEdgeColored.jpg" width="720px" />
+                    <img src="img/monasteryEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</figcaption></td>
                 </tr>
             </table>
@@ -221,7 +221,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/nativityEdgeColored.jpg" width="720px" />
+                    <img src="img/nativityEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</figcaption></td>
                 </tr>
             </table>
@@ -230,7 +230,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/settlersEdgeColored.jpg" width="720px" />
+                    <img src="img/settlersEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</figcaption></td>
                 </tr>
             </table>
@@ -250,33 +250,33 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/monastery.jpg" width="250px" />
+                    <img src="img/monastery.jpg" width="250px" >
                     <figcaption align="middle">Figure 0: Blue, green, and red filtered images</figcaption></td>
                 </tr>
             </table>
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/monasteryBasicColored.jpg" width="500px" />
+                    <img src="img/monasteryBasicColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 1: all pixels of monastery.jpg: R:[8 1] G:[-6  0] TIME:0.565473079681</figcaption></td>
                     <td align="middle">
-                    <img src="img/monasteryNaiveColored.jpg" width="500px" />
+                    <img src="img/monasteryNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 2: middle 50% of pixels monastery.jpg: R:[2 2] G:[-3  2] TIME:0.41522693634</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="img/nativityBasicColored.jpg" width="500px" />
+                    <img src="img/nativityBasicColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 3: all pixels of nativity.jpg: R:[7 1] G:[4 1] TIME:0.594136953354</figcaption></td>
                     <td align="middle">
-                    <img src="img/nativityNaiveColored.jpg" width="500px" />
+                    <img src="img/nativityNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 4: middle 50% of pixels nativity.jpg: R:[8 0] G:[3 1] TIME:0.450391054153</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="img/settlersBasicColored.jpg" width="500px" />
+                    <img src="img/settlersBasicColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 5: all pixels of settlers.jpg: R:[14 -1] G:[7 0] TIME:0.823676109314</figcaption></td>
                     <td align="middle">
-                    <img src="img/settlersNaiveColored.jpg" width="500px" />
+                    <img src="img/settlersNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 6: middle 50% of pixels settlers.jpg: R:[14 -1] G:[7 0] TIME:0.405462026596</figcaption></td>
                 </tr>
             </table>
@@ -289,18 +289,18 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/cathedralTimeColored.jpg" width="500px"/>
+                    <img src="img/cathedralTimeColored.jpg" width="500px">
                     <figcaption align="middle">Figure 7: Naive cathedral.jpg: R:[12  3] G:[5 2] TIME:2.9832880497.</figcaption></td>
                     <td align="middle">
-                    <img src="img/cathedralNaiveColored.jpg" width="500px"/>
+                    <img src="img/cathedralNaiveColored.jpg" width="500px">
                     <figcaption align="middle">Figure 8: Image Pyramid cathedral.jpg: R:[12  3] G:[5 2] TIME:0.675570011139.</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="img/iconTimeColored.jpg" width="500px"/>
+                    <img src="img/iconTimeColored.jpg" width="500px">
                     <figcaption align="middle">Figure 9: Naive icon.tif: R:[15 12] G:[15 14] TIME:316.376515865.</figcaption></td>
                     <td align="middle">
-                    <img src="img/iconNaiveColored.jpg" width="500px"/>
+                    <img src="img/iconNaiveColored.jpg" width="500px">
                     <figcaption align="middle">Figure 10: Image Pyramid icon.tif: R:[89 23] G:[41 17] TIME:17.6947059631</figcaption></td>
                 </tr>
             </table>
@@ -312,18 +312,18 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/self_portraitNaiveColored.jpg" width="500px" />
+                    <img src="img/self_portraitNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 1: middle 50% of pixels self_portrait.tif: R:[175  37] G:[78 29] TIME:13.4188771248</figcaption></td>
                     <td align="middle">
-                    <img src="img/three_generationsNaiveColored.jpg" width="500px" />
+                    <img src="img/three_generationsNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 12: middle 50% of pixels of three_generations.tif: R:[110  12] G:[52 14] TIME:14.5100548267</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="img/turkmenNaiveColored.jpg" width="500px" />
+                    <img src="img/turkmenNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 13: middle 50% of pixels turkmen.tif: R:[116  28] G:[55 21] TIME:13.3178520203</figcaption></td>
                     <td align="middle">
-                    <img src="img/villageNaiveColored.jpg" width="500px" />
+                    <img src="img/villageNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 14: middle 50% of pixels village.tif: R:[137  22] G:[64 12] TIME:15.6597101688</figcaption></td>
                 </tr>
             </table>
@@ -334,17 +334,17 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/emirBasicColored.jpg" width="500px" />
+                    <img src="img/emirBasicColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 15: all pixels of emir.tif: R:[107  17] G:[-3  7] TIME:14.2561810017</figcaption></td>
                     <td align="middle">
-                    <img src="img/emirNaiveColored.jpg" width="500px" />
+                    <img src="img/emirNaiveColored.jpg" width="500px" >
                     <figcaption align="middle">Figure 16: middle 50% of pixels emir.tif: R:[ 258 -213] G:[48 24] TIME:13.4975399971</figcaption></td>
                 </tr>
             </table>
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="img/emirEdgeColored.jpg" width="720px" />
+                    <img src="img/emirEdgeColored.jpg" width="720px" >
                     <figcaption align="middle">Figure 17: canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</figcaption></td>
                 </tr>
             </table>
@@ -363,6 +363,7 @@
             </div>
         </div>
     </section>
+    <script src="slideshow.js"></script>
     <script src=../"js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
@@ -374,7 +375,6 @@
     <script src="../js/wow.min.js"></script>
     <script src="../js/scrolling-nav.js"></script>
     <script src="../js/faded.js"></script>
-    <script src="slideshow.js"></script>
 
 </body>
 </html>
