removed name and got slideshow to work

--- a/Images/index.html
+++ b/Images/index.html
@@ -66,14 +66,13 @@
 <section class="bg">
 <br />
 <h1 align="middle">Images of the Russian Empire -- colorizing the Prokudin-Gorskii photo collection </h1>
-    <h2 align="middle">Vincent Escueta</h2>
 
     <div class="padded">
         <p>Sergei Mikhailovich Prokudin-Gorskii took 3 cameras. He put a blue filter on one, a green filter on another, and a red filter over the last. He put the green camera on top the red camera and the blue camera on top of the green one. He then took these cameras and photographs of scenes with all three cameras. Sergei took thousands of pictures, but never got to see them in color. By aligning his photographs using normalized cross correlation, the colored photographs that Sergei wanted have now come to life.</p>
 
     <h2 align="middle"> Results for all images </h2>
         <div class="slideshow-container">
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -82,7 +81,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -91,7 +90,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -100,7 +99,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -109,7 +108,7 @@
                 </tr>
             </table>
          </div>
-        <div class="slide fade">
+        <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -118,7 +117,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -127,7 +126,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -136,7 +135,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -145,7 +144,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -154,7 +153,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -163,7 +162,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -172,7 +171,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -181,7 +180,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -190,7 +189,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -199,7 +198,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -208,7 +207,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -217,7 +216,7 @@
                 </tr>
             </table>
          </div>
-        <div class="slide fade">
+        <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
@@ -226,7 +225,7 @@
                 </tr>
             </table>
          </div>
-         <div class="slide fade">
+         <div class="slide">
             <table style="width=100%">
                 <tr>
                     <td align="middle">
