--- a/LensSimulator/index.html
+++ b/LensSimulator/index.html
@@ -75,17 +75,17 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="images/part1_spheres_nolens.png" width="480px" />
+                    <img src="images/part1_spheres_nolens.png" width="480px" >
                     <figcaption align="middle">Figure 1: A rendering of spheres using a pinhole camera.</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="images/part1_spheres_lens.png" width="480px" />
+                    <img src="images/part1_spheres_lens.png" width="480px" >
                     <figcaption align="middle">Figure 2: A blurred rendering of spheres with a lens.</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="images/part1_spheres_len4.png" width="480px" />
+                    <img src="images/part1_spheres_len4.png" width="480px" >
                     <figcaption align="middle">Figure 3: An image with using a fisheye lens.</figcaption></td>
                 </tr>
             </table>
@@ -163,22 +163,22 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="images/part1_Gauss.png" width="1000px"/>
+                    <img src="images/part1_Gauss.png" width="1000px">
                     <figcaption align="middle">Figure 17: D-GAUSS F/2 22deg HFOV /  Some points are (51.2587, -1223480), (52.6039, -1925.48), (53.142, -1388.52), (56.7741, -503.47) (60.5407, -317.08), (64.5763, -234.35)</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="images/part1_Wide-Angle.png" width="1000px"/>
+                    <img src="images/part1_Wide-Angle.png" width="1000px">
                     <figcaption align="middle">Figure 18: Wide-angle (38-degree) lens. Nakamura. / Some points are (28.7361, -13947.9), (31.0729, -229.471), (33.5072, -126.268), (35.3572, -98.3175) (37.4994, -80.6369), (38.4731, -751624)</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="images/part1_SIGLER.png" width="1000px"/>
+                    <img src="images/part1_SIGLER.png" width="1000px">
                     <figcaption align="middle">Figure 19: SIGLER Super achromate telephoto, EFL=254mm, F/5.6" / Some points are (188.754, -3.31E+06), (194.503, -11148), (202.866, -4758.76), (210.184, -3255.26) (225.341, -2053.01), (240.499, -1554.85)</figcaption></td>
                 </tr>
                 <tr>
                     <td align="middle">
-                    <img src="images/Fish_eye.png" width="1000px"/>
+                    <img src="images/Fish_eye.png" width="1000px">
                     <figcaption align="middle">Figure 20: Muller 16mm/f4 155.9FOV fisheye lens / Some points are (28.6893, -4700.97), (31.8559, -51.0458), (33.727, -39.525), (36.1739, -33.1267) (40.2041, -28.5056), (42.9388, -26.8565) </figcaption></td>
                 </tr>
             </table>
@@ -191,10 +191,10 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="images/part1_near_focus_dragon.png" width="480px" />
+                    <img src="images/part1_near_focus_dragon.png" width="480px" >
                     <figcaption align="middle">Figure 21: A rendering of a dragon with a focus on the right side of its face.</figcaption></td>
                     <td align="middle">
-                    <img src="images/part1_coil.png" width="480px" />
+                    <img src="images/part1_coil.png" width="480px" >
                     <figcaption align="middle">Figure 22: A rendering of a coil with a focus towards the end of it.</figcaption></td>
                 </tr>
             </table>
@@ -206,10 +206,10 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="images/bunny_before_tricky.png" width="480px" />
+                    <img src="images/bunny_before_tricky.png" width="480px" >
                     <figcaption align="middle">Figure 23: Discarding rays if missed, no extra tries.</figcaption></td>
                     <td align="middle">
-                    <img src="images/bunny_after_tricky_no_bugs.png" width="480px" />
+                    <img src="images/bunny_after_tricky_no_bugs.png" width="480px" >
                     <figcaption align="middle">Figure 24: After implementing extra credit.</figcaption></td>
                 </tr>
             </table><
@@ -233,10 +233,10 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="images/part2_bunny1.png" width="480px" />
+                    <img src="images/part2_bunny1.png" width="480px" >
                     <figcaption align="middle">Figure 25: Bunny before autofocus.</figcaption></td>
                     <td align="middle">
-                    <img src="images/part2_bunny2.png" width="480px" />
+                    <img src="images/part2_bunny2.png" width="480px" >
                     <figcaption align="middle">Figure 26: Bunny after autofocus.</figcaption></td>
                 </tr>
             </table>
@@ -246,7 +246,7 @@
             <table style="width=100%">
                 <tr>
                     <td align="middle">
-                    <img src="images/Focus_metric.png" width="1000px"/>
+                    <img src="images/Focus_metric.png" width="1000px">
                     <figcaption align="middle">Figure 27: Sensor depths tested in autofocus function / Some points are (51.2587, 408.701), (53.0587, 977.744), (53.8087, 1306.53), (54.4087, 1416.44) (55.1587, 1067.81), (57.1087, 487.911) (64.6087, 105.209)</figcaption></td>
                 </tr>
             </table>
