--- a/Others/index.html
+++ b/Others/index.html
@@ -9,116 +9,130 @@
       padding-left: 100px;  
     }  
   </style> 
-<title>Vincent Escueta  |  CS 194-26</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link href="slideshow.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <title>Vincent Escueta  |  Graphic Design</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Vincent Escueta">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../main.css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
 </head>
 <body>
+ <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="../index.html">Vincent Escueta</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="../index.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="../about.html">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="../index.html#resume">Resume</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <header class="bg"> </header>
+<section class="bg">
 <br />
-<h1 align="middle">Other Side Projects</h1>
-    <h2 align="middle">Vincent Escueta</h2>
-
-    <div class="padded">
-        <p></p>
-
-    <h2 align="middle"> All Images </h2>
-        <div class="slideshow-container">
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/nametagretreat.png" width="720px" />
-                    <figcaption align="middle">Nametag made in Photoshop used for a Catholic Retreat I led at Newman Hall-Holy Spirit Parish</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/NameTag.png" width="720px" />
-                    <figcaption align="middle">Nametag made in Illustrator used for the University Catholic Conference of California 2018</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/facebook_watermark3.png" width="720px" />
-                    <figcaption align="middle">Facebook watermark made in Photoshop for the University Catholic Conference of California 2018</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/Flyerfront.png" width="540px" />
-                    <figcaption align="middle">Front side of flyer made in Illustrator for the University Catholic Conference of California 2018</figcaption></td>
-                </tr>
-            </table>
-         </div>
-        <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/Flyerback.png" width="540px" />
-                    <figcaption align="middle">Back side of flyer made in Illustrator for the University Catholic Conference of California 2018</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
+<h1 align="middle">University Catholic Conference of California 2018 Fliers, Nametags, etc.</h1>
+        <div class="container ">
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <img src="img/NameTag.png" width="540px" />
+                    <p align="middle">Nametag made in Adobe Illustrator</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <img src="img/facebook_watermark3.png" width="540px" />
+                    <p align="middle">Facebook watermark made in Adobe Photoshop</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-6 col-sm-6 text-center">                    
+                    <img src="img/Flyerfront.png" width="420px" />
+              </div>
+              <div class="col-lg-6 col-sm-6 text-center">
+                    <img src="img/Flyerback.png" width="420px" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p align="middle">Front and back of flyer made in Adobe Illustrator</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img src="img/FrontandBack Cover.png" width="720px" />
-                    <figcaption align="middle">Front and back cover of the brochure made in Photoshop used for the University Catholic Conference of California 2018</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/snapchat.png" width="540px" />
-                    <figcaption align="middle">Snapchat filter made in Photoshop used for the University Catholic Conference of California 2018</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/vgif2.gif" width="720px" />
-                    <figcaption align="middle">GIF representing the vertigo shot in film made in Premiere Pro</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/Turnable.gif" width="720px" />
-                    <figcaption align="middle">Cello model made in Autodesk Maya</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <div class="slide fade">
-            <table style="width=100%">
-                <tr>
-                    <td align="middle">
-                    <img src="img/morphgifsmall.gif" width="540px" />
-                    <figcaption align="middle">Face morph coded in Python by plotting points, doing Delaunay triangulation, then manipulating the image through intperolation of corresponding points of the two faces.</figcaption></td>
-                </tr>
-            </table>
-         </div>
-         <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
-         <a class="next hvr-grow" onclick="plusSlides(1)">&#10095;</a>
+                    <p align="middle">Front and back cover of the brochure made in Adobe Photoshop</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <img src="img/snapchat.png" width="420px" />
+                    <p align="middle">Snapchat filter made in Adobe Photoshop</p>
+              </div>
+            </div>
+            </div>
+</section>
+<section class="bg" id="resume">
+        <div class="container text-center">
+            <div class="row">
+                     <p>
+                        <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
+                        <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fa fa-linkedin wow bounceIn"></i></a>
+                        <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
+                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
+                    </p>
+                    <p class="update">Last Updated: December 7, 2018</p>    
+            </div>
         </div>
-        </div>
+    </section>
+    <script src=../"js/jquery.js"></script>
 
-<script src="slideshow.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../js/jquery.easing.min.js"></script>
+    <script src="../js/jquery.fittext.js"></script>
+    <script src="../js/wow.min.js"></script>
+    <script src="../js/scrolling-nav.js"></script>
+    <script src="../js/faded.js"></script>
+
 </body>
 </html>
+
+
+
+
