trying something new

--- a/Others/index.html
+++ b/Others/index.html
@@ -9,7 +9,7 @@
       padding-left: 100px;  
     }  
   </style> 
-    <title>Vincent Escueta  |  Graphic Design</title>
+    <title>Vincent Escueta  |  UCCC 2018</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,8 +64,13 @@
     <header class="bg"> </header>
 <section class="bg">
 <br />
-<h1 align="middle">University Catholic Conference of California 2018 Fliers, Nametags, etc.</h1>
+<h1 align="middle">University Catholic Conference of California 2018 Website, Fliers, Nametags, etc.</h1>
         <div class="container ">
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <a href="https://vincent-escueta22.github.io/UCCC2018/">Click here for the UCCC 2018 Website</a>
+              </div>
+            </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img src="img/NameTag.png" width="540px" />
