--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@
 <!--             <h3 class="text-center">Technical</h3> -->
 <!--             <div class="row no-gutter"> -->
                  <div class="col-lg-4 col-sm-6">
-                    <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link programming">
-                        <img src="img/uccc2018.png" class="img-responsive" alt="">
+<!--                     <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link programming"> -->
+                    <a href="Others/index.html" class="portfolio-box portfolio-link graphic-design">
+                     <img src="img/uccc2018.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Web Development
+                                    Web Development & Graphic Design
                                 </div>
                                 <div class="project-name">
-                                    University Catholic Conference of California 2018 Website (Opens New Page)
+                                    University Catholic Conference of California 2018
                                 </div>
                             </div>
                         </div>
