--- a/Others/index.html
+++ b/Others/index.html
@@ -68,7 +68,7 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <br><br><br><br><h2><a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank">Click here for the UCCC 2018 Website</a></h2><br><br><br><br>
+                  <br><br><h2><a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank">Click here for the UCCC 2018 Website</a></h2><br><br><br><br>
               </div>
             </div>
             <div class="row">
