--- a/index.html
+++ b/index.html
@@ -121,22 +121,6 @@
 <!--             </div> -->
 <!--             <h3 class="text-center">Technical</h3> -->
 <!--             <div class="row no-gutter"> -->
-                 <div class="col-lg-4 col-sm-6">
-<!--                     <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link programming"> -->
-                    <a href="Others/index.html" class="portfolio-box portfolio-link graphic-design">
-                     <img src="img/uccc2018.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Web Development & Graphic Design
-                                </div>
-                                <div class="project-name">
-                                    University Catholic Conference of California 2018
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="autostitch/index.html" class="portfolio-box portfolio-link programming">
                         <img src="img/autostitch.jpg" class="img-responsive" alt="">
@@ -243,7 +227,22 @@
                     </a>
                 </div>
 <!--             </div> -->
-            
+                <div class="col-lg-4 col-sm-6">
+<!--                     <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link programming"> -->
+                    <a href="Others/index.html" class="portfolio-box portfolio-link graphic-design">
+                     <img src="img/uccc2018.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Web Development & Graphic Design
+                                </div>
+                                <div class="project-name">
+                                    University Catholic Conference of California 2018
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
@@ -274,7 +273,7 @@
                                     Graphic Design
                                 </div>
                                 <div class="project-name">
-                                    University Catholic Conference of California Fliers, Nametags, etc.
+                                    Personal
                                 </div>
                             </div>
                         </div>
