--- a/Others/index.html
+++ b/Others/index.html
@@ -69,7 +69,8 @@
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
                   <br><br><h2><a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank">Click here for the UCCC 2018 Website</a></h2><br><br><br><br>
-              </div>
+                  <p align="middle">Made with HTML, CSS3, abd JavaScript</p>
+                </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
