--- a/Others/index.html
+++ b/Others/index.html
@@ -29,7 +29,7 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
 </head>
-<body>
+<body id="page-top">
  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
