--- a/Others/index.html
+++ b/Others/index.html
@@ -56,7 +56,7 @@
     <header class="bg"> </header>
 <section class="bg">
 <br />
-<h1 align="middle">University Catholic Conference of California 2018 Website, Fliers, Nametags, etc.</h1>
+<h1 align="middle">aUniversity Catholic Conference of California 2018 Website, Fliers, Nametags, etc.</h1>
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
