--- a/Others/index.html
+++ b/Others/index.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body id="page-top" class="fade-out">
+<body id="page-top" class=>
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
